--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,5 @@ node_modules
 .vs/*
 .DS_Store
 *.DS_Store
-dist/*/*
-dist/*
-original_documents/*
-!dist/images
-!dist/images/*
 package-lock.json
-src/assets/images/numbers
-src/assets/images/Website_pics
+src/*
