--- a/docs/json/upcoming-projects.json
+++ b/docs/json/upcoming-projects.json
@@ -1,13 +1,120 @@
-{
+﻿{
+	"body":
+	{
+		"color_list":  
+		[
+			{ 
+				"name":"White",  
+				"opacity": 1, 
+				"hex":"000000" 
+			}, 
+			{ 
+				"name":"Isabelline", 
+				"opacity": 1, 
+				"hex":"ede8e4" 
+			}, 
+			{ 
+				"name":"Mint green", 
+				"opacity": 1, 
+				"hex":"d6fff6" 
+			}, 
+			{ 
+				"name":"Celadon", 
+				"opacity": 1, 
+				"hex":"7dcca4" 
+			}, 
+			{ 
+				"name":"Shamrock green", 
+				"opacity": 1, 
+				"hex":"249952" 
+			}, 
+			{ 
+				"name":"Chefchaouen Blue", 
+				"opacity": 1, 
+				"hex":"4a8fe7" 
+			}, 
+			{  
+				"name":"Mikado yellow", 
+				"opacity": 1, 
+				"hex":"ffc634" 
+			}, 
+			{ 
+				"name":"Coral", 
+				"opacity": 1, 
+				"hex":"ff8a5b" 
+			}, 
+			{ 
+				"name":"Persian indigo", 
+				"opacity": 1, 
+				"hex":"360568" 
+			}, 
+			{ 
+				"name":"Dark purple", 
+				"opacity": 1, 
+				"hex":"1f0322" 
+			}, 
+			{ 
+				"name":"Black", 
+				"opacity": 1, 
+				"hex":"FFFFFF" 
+			}  
+		], 
+		"paragraph_font":
+		{ 
+			"family_name": "Roboto",
+			"generic_name": "sans-serif", 
+			"font_weight": 300
+		},
+		"decoration_font":
+		{ 
+			"family_name": "Farsan",
+			"generic_name": "cursive", 
+			"font_weight": 400
+		},
+		"header_font":
+		{ 
+			"family_name": "Calligraffitti",
+			"generic_name": "cursive", 
+			"font_weight": 400
+		}, 
+		"deco_shape_1":
+		{
+			"display": true,
+			"filename": "lg-round-shape.png"
+		},
+		"deco_shape_2":
+		{
+			"display": true,
+			"filename": "lg-round-shape.png"
+		}
+	},
+	"intro":
+	{
+		"intro_traits": "Actor ◈ Playwright ◈ Laugh Coach",
+		"intro_statement": "The funny in the heartbreaking, the truth in the absurd — if you’re going to cry, why not do it in front of an audience?",
+		"btn_primary":
+		{
+			"display": true,
+			"text": "Get in Touch",
+			"link": "/contact-me"
+		},
+		"btn_secondary":
+		{
+			"display": true,
+			"text": "Meet the Artist",
+			"link": "/about-me"	
+		},
+		"intro_image": "intro.png"
+	},
 	"header":
 	{
-		"navbar-brand":
+		"navbar_brand":
 		{
 			"filename": "logo.png",
 			"link": "/about-me"
 			
 		},
-		"header-content-menu":
+		"header_content_menu":
 		[
 			{
 				"name": "Home",
@@ -31,27 +138,35 @@
 			}
 		]
 	},
-	"upcoming":
-	[
-		{
-			"odd": true,
-			"title": "To Be Here",
-			"link": "to-be-here",
-			"credit": "",
-			"role": "Daisy",
-			"description": "Exploring the effects of physically degenerative illnesses on mental health, TO BE HERE follows Daisy, a young woman who has watched her father, Benjie, cope with progressive physical deterioration for many years. Now that Benjie has reached the last stage of his illness, he and Daisy work together to reconcile their shared experiences versus how they hope to remember one another as they are confronted with the limit that time imposes."
-		},
-		{
-			"odd": false,
-			"title": "Death Sentence(s)",
-			"link": "death-sentences",
-			"credit": "\"Hartetest\" by derpoly is licensed under CC BY-SA 2.0.",
-			"role": "Author",
-			"description": "Halloween. The best time of year for pumpkins, candy, tricks, and... murder? The horror gets all too real when three friends discover a dead burglar in their front hallway. Truths are revealed and friendships are tested, but nothing can prepare the trio for the night that awaits them..."
-		}
-	],
+	"upcoming": 
+	{
+		"header_text": "Coming Soon...",
+		"para_text": "Upcoming Projects",
+		"button_text": "Tell me More",
+		"list":
+		[
+			{
+				"odd": true,
+				"title": "To Be Here",
+				"link": "to-be-here",
+				"credit": "",
+				"role": "Daisy",
+				"description": "Exploring the effects of physically degenerative illnesses on mental health, TO BE HERE follows Daisy, a young woman who has watched her father, Benjie, cope with progressive physical deterioration for many years. Now that Benjie has reached the last stage of his illness, he and Daisy work together to reconcile their shared experiences versus how they hope to remember one another as they are confronted with the limit that time imposes."
+			},
+			{
+				"odd": false,
+				"title": "Death Sentence(s)",
+				"link": "death-sentences",
+				"credit": "\"Hartetest\" by derpoly is licensed under CC BY-SA 2.0.",
+				"role": "Author",
+				"description": "Halloween. The best time of year for pumpkins, candy, tricks, and... murder? The horror gets all too real when three friends discover a dead burglar in their front hallway. Truths are revealed and friendships are tested, but nothing can prepare the trio for the night that awaits them..."
+			}
+		],
 	"prior":
 	{
+		"header_text": "Previously On…",
+		"para_text": "Selected Works",
+		"button_text": "Show Me More",
 		"videos":
 		[
 			{
@@ -190,40 +305,46 @@
 		]
 	},
 	"reviews":
-	[
-		{
-			"name": "Peter Filichia",
-			"person_information": "NYC theater critic/ Host of annual Theatre World Awards",
-			"photo": "peter-filichia",
-			"role": "Ben Franklin",
-			"show": "Liberty Smith",
-			"description": "At intermission, I corralled Unger to say how thrilled I was thus far. \"And that kid playing Ben Franklin!\" I exuded. \"You must have been so thrilled the moment he walked through the door!\" \"SHE,\" he corrected. And indeed the program revealed that a Melissa Shohet was playing ol' Ben. The excellent performer could have fooled me - and did."
-		},
-		{
-			"name": "Forrest McClendon",
-			"person_information": "Award-winning performer, pedagogue, and theater-maker",
-			"photo": "forrest-mcclendon",
-			"role": "Letty Cottin Pogrebin",
-			"show": "Fires in the Mirror",
-			"description": "Revelatory - moving and mesmerizing."
-		},
-		{
-			"name": "Cloteal L. Horne",
-			"person_information": "Acclaimed storyteller and educator",
-			"photo": "cloteal-horne",
-			"role": "Sorin",
-			"show": "The Seagull",
-			"description": "It is the mark of a wonderful artist when they can etch out a role and give it full humanity, and you did that with Sorin. Your physical work communicated an extraordinary amount of information, and you anchored this scene in honest and liberating ways."
-		},
-		{
-			"name": "Dylan Kwang",
-			"person_information": "JHU Newsletter",
-			"photo": "jhu-newsletter",
-			"role": "Dr. Mortimer",
-			"show": "The Hound of the Baskervilles",
-			"description": "Melissa Shohet stole almost every scene. Her hilariously dramatic account of the Baskerville curse had the audience in stitches."
-		}
-	],
+	{
+		"header_text": "The Reviews Are In!",
+		"para_text": "Click to display selected review",
+		"between_text": "   as  ",
+		"review_content":
+		[
+			{
+				"name": "Peter Filichia",
+				"person_information": "NYC theater critic/ Host of annual Theatre World Awards",
+				"photo": "peter-filichia",
+				"role": "Ben Franklin",
+				"show": "Liberty Smith",
+				"description": "At intermission, I corralled Unger to say how thrilled I was thus far. \"And that kid playing Ben Franklin!\" I exuded. \"You must have been so thrilled the moment he walked through the door!\" \"SHE,\" he corrected. And indeed the program revealed that a Melissa Shohet was playing ol' Ben. The excellent performer could have fooled me - and did."
+			},
+			{
+				"name": "Forrest McClendon",
+				"person_information": "Award-winning performer, pedagogue, and theater-maker",
+				"photo": "forrest-mcclendon",
+				"role": "Letty Cottin Pogrebin",
+				"show": "Fires in the Mirror",
+				"description": "Revelatory - moving and mesmerizing."
+			},
+			{
+				"name": "Cloteal L. Horne",
+				"person_information": "Acclaimed storyteller and educator",
+				"photo": "cloteal-horne",
+				"role": "Sorin",
+				"show": "The Seagull",
+				"description": "It is the mark of a wonderful artist when they can etch out a role and give it full humanity, and you did that with Sorin. Your physical work communicated an extraordinary amount of information, and you anchored this scene in honest and liberating ways."
+			},
+			{
+				"name": "Dylan Kwang",
+				"person_information": "JHU Newsletter",
+				"photo": "jhu-newsletter",
+				"role": "Dr. Mortimer",
+				"show": "The Hound of the Baskervilles",
+				"description": "Melissa Shohet stole almost every scene. Her hilariously dramatic account of the Baskerville curse had the audience in stitches."
+			}
+		]
+	},
 	"contact":
 	{
 		"form_header": "Fill out this handy form...",
@@ -231,6 +352,15 @@
 		"address": "Arlington, VA - DMV local",
 		"phone": "(203) 470 - 7095",
 		"email": "melissashohetacts@gmail.com",
+		"linkedin": "https://www.linkedin.com/company/melissa-shohet-acts",
+		"actors_access": "https://resumes.actorsaccess.com/melissashohetacts",
+		"casting_networks": "https://app.castingnetworks.com/talent/public-profile/dec3cd9c-883c-11f0-8b5d-03413ce089b5",
+		"casting_call_club": "https://cstng.cc/melissashohetacts",
 		"web3forms_apikey": "e8f6aeb7-8178-4717-8b9a-858fa8508183"
+	},
+	"footer":
+	{
+		"button_text": "&uarr;Back to Top",
+		"additional_copyright": ""
 	}
 }
