--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,7 +23,12 @@ concurrency:
 
 jobs:
   # Single deploy job since we're just deploying
-  deploy:
+  deploy: 
+    with:
+      inlineScript: |
+        JSON_URL=${{ secrets.JSON_URL }}
+        echo "::add-mask::$JSON_URL"
+        sed -i "s|JSON_URL|${{ secrets.JSON_URL }}|g" index.html
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
