--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,9 +2,8 @@
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes targeting any branch
   push:
-    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,19 +28,23 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout And Replace Secrets
+      - name: Checkout
         uses: actions/checkout@v4
-        with: 
-          json_url: ${{ secrets.JSON_URL }}
-          run: |
-            sed -i "s|JSON_URL|::add-mask::json_url|g" index.html
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
+      - name: Replace Secrets
+        run: |
+          sed -i "s|JSON_URL|${{ secrets.JSON_URL }}|g" *.html 
+#      - name: Setup Pages
+ #       uses: actions/configure-pages@v5
+  #    - name: Upload artifact
+   #     uses: actions/upload-pages-artifact@v3
+    #    with:
           # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+     #     path: '.'
+  #    - name: Deploy to GitHub Pages
+   #     id: deployment
+    #    uses: actions/deploy-pages@v4
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
