--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Replace Secrets
         run: |
-          sed -i "s|JSON_URL|${{ secrets.JSON_URL }}|g" *.html 
+          find docs -name "*.html" -type f -exec sed -i "s|JSON_URL|${{ secrets.JSON_URL }}|g" *.html {} +
 #      - name: Setup Pages
  #       uses: actions/configure-pages@v5
   #    - name: Upload artifact
