Trying to make things more secure

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,18 +33,14 @@ jobs:
       - name: Replace Secrets
         run: |
           find docs -name "*.html" -type f -exec sed -i "s|JSON_URL|${{ secrets.JSON_URL }}|g" {} +
-#      - name: Setup Pages
- #       uses: actions/configure-pages@v5
-  #    - name: Upload artifact
-   #     uses: actions/upload-pages-artifact@v3
-    #    with:
-          # Upload entire repository
-     #     path: '.'
-  #    - name: Deploy to GitHub Pages
-   #     id: deployment
-    #    uses: actions/deploy-pages@v4
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+      
